[project]
name = "mosb-logistics-dashboard"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["mosb_logistics_dashboard_next_fastapi_mvp/backend/tests"]
addopts = "-q --strict-markers --maxfail=1"

[tool.coverage.run]
source = ["mosb_logistics_dashboard_next_fastapi_mvp/backend"]
branch = true

[tool.coverage.report]
fail_under = 85.00
precision = 2
show_missing = true

[tool.ruff]
line-length = 100
fix = true
show-fixes = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
